[package]
name = "kauma"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
openssl = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
num = "0.4"
rand = "0.9"
rug = { version = "1.28", features = ["integer"] }
gmp-mpfr-sys = { version = "1.6.8", features = ["use-system-libs"] }

[profile.benchmark]
inherits = "release"
debug = true